[package]
name = "s2n-quic-mtc"
version = "0.76.0"
description = "Merkle Tree Certificate verification primitives (draft-ietf-plants-merkle-tree-certs)"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"

[dependencies]
aws-lc-rs = { version = "1.12", features = ["prebuilt-nasm", "unstable"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[[bin]]
name = "twig"
path = "src/bin/twig.rs"

[[bin]]
name = "cert_sizes"
path = "experiments/cert_sizes.rs"

[[bin]]
name = "live_verify"
path = "experiments/live_verify.rs"

[[bin]]
name = "scale_sim"
path = "experiments/scale_sim.rs"

[dev-dependencies]
hex-literal = "1.1"
hex = "0.4"
x509-parser = "0.16"
base64 = "0.22"
pem = "3"
